Fix Vulkan platform define

Different translation units were seeing different structs holding the
Vulkan function pointers. This was because those different translation
units may or may not have had the Vulkan platform define set.

This means one translation unit saw a struct which contained an
Android-specific function pointer. Another translation unit saw a struct
which didn't have that function pointer.

The function pointers were being clobbered as these different
translation units attempted to fill in the struct.

This patch will set the Vulkan platform define in BUILD.gn so all Vulkan
translation units have that define set.

BUG=851718

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Idb56c9caaeaf9ac8351cd58fb9c70877cc909487
Reviewed-on: https://chromium-review.googlesource.com/1096373
Commit-Queue: Chris Blume <cblume@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566555}
Former-commit-id: ab96bc86f1f6a627940fee0c03b0471e7d0fa126